// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostText - Snapshots > matches snapshot for autolinked URL 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      class="text-brand"
      href="https://example.com/path?query=value"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://example.com/path?query=value
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for blockquote 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <blockquote
    class="border-l-4 border-foreground pl-4 whitespace-normal"
  >
    

    <p>
      This is a quoted message
    </p>
    

  </blockquote>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for bold and italic text 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <strong>
      bold
    </strong>
     and 
    <em>
      italic
    </em>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for code block 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <pre>
    <code
      class="language-javascript"
      data-testid="post-code-block"
    >
      const greeting = "Hello";
console.log(greeting);

    </code>
  </pre>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for code block without language 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <pre>
    <code
      class="language-plaintext"
      data-testid="post-code-block"
    >
      plain code block

    </code>
  </pre>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for combined markdown elements 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  Welcome
  

  <p>
    This is 
    <strong>
      bold
    </strong>
     and 
    <em>
      italic
    </em>
     text with a 
    <a
      class="text-brand"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      link
    </a>
    .
  </p>
  

  <blockquote
    class="border-l-4 border-foreground pl-4 whitespace-normal"
  >
    

    <p>
      A meaningful quote
    </p>
    

  </blockquote>
  

  <ul
    class="list-inside list-disc whitespace-normal"
  >
    

    <li>
      Item one
    </li>
    

    <li>
      Item two
    </li>
    

  </ul>
  

  <pre>
    <code
      class="language-js"
      data-testid="post-code-block"
    >
      const x = 42;

    </code>
  </pre>
  

  <p>
    Use 
    <code
      data-testid="post-code-block"
    >
      inline code
    </code>
     for variables.
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for content with special characters 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Special chars: &lt;&gt;&"' and emoji: 🎉🚀
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for empty content 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
/>
`;

exports[`PostText - Snapshots > matches snapshot for horizontal rule 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Above the line
  </p>
  

  <hr />
  

  <p>
    Below the line
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for inline code 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Use 
    <code
      data-testid="post-code-block"
    >
      console.log()
    </code>
     for debugging
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for links 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Visit 
    <a
      class="text-brand"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Example Site
    </a>
     for more
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for multiline content with line breaks 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    First line
Second line
Third line
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for nested blockquote 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <blockquote
    class="border-l-4 border-foreground pl-4 whitespace-normal"
  >
    

    <p>
      Level 1
    </p>
    

    <blockquote
      class="border-l-4 border-foreground pl-4 whitespace-normal"
    >
      

      <p>
        Level 2
      </p>
      

    </blockquote>
    

  </blockquote>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for ordered list 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <ol
    class="list-inside list-decimal whitespace-normal"
  >
    

    <li>
      First item
    </li>
    

    <li>
      Second item
    </li>
    

    <li>
      Third item
    </li>
    

  </ol>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for plain text 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Simple plain text content
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for strikethrough text 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <del>
      strikethrough
    </del>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for unordered list 1`] = `
<div
  class="text-base leading-6 font-medium break-all whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <ul
    class="list-inside list-disc whitespace-normal"
  >
    

    <li>
      Apple
    </li>
    

    <li>
      Banana
    </li>
    

    <li>
      Cherry
    </li>
    

  </ul>
</div>
`;
